{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 85,
  "lineage": "47c3a1fd-1992-aec4-d175-3e64c8584046",
  "resources": [
    {
      "module": "module.app.module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:533266998617:vpc/vpc-05c5611f7f25039bb",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0900609c17df9c5f4",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0133e4b6ecb01c0cc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c5611f7f25039bb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0938e510526f833a4",
            "owner_id": "533266998617"
          }
        }
      ]
    },
    {
      "module": "module.app.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_beanstalk_elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:533266998617:security-group/sg-09d7b471c1e80b1da",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all out traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d7b471c1e80b1da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ideas-api-staging-beantalk-elb-sg",
            "name_prefix": "",
            "owner_id": "533266998617",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ideas-api-staging-beanstalk-elb-sg"
            },
            "tags_all": {
              "Name": "ideas-api-staging-beanstalk-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c5611f7f25039bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.app.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_beanstalk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:533266998617:security-group/sg-0137654623111d7e4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all out traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0137654623111d7e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow access from load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d7b471c1e80b1da"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ideas-api-staging-beanstalk-sg",
            "name_prefix": "",
            "owner_id": "533266998617",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ideas-api-staging-beanstalk-sg"
            },
            "tags_all": {
              "Name": "ideas-api-staging-beanstalk-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c5611f7f25039bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.module.vpc.aws_security_group.app_beanstalk_elb_sg",
            "module.app.module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.app.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:533266998617:security-group/sg-0b1564af7a53ff3e5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1564af7a53ff3e5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0137654623111d7e4"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ideas-api-staging-rds-sg",
            "name_prefix": "",
            "owner_id": "533266998617",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ideas-api-staging-rds-sg"
            },
            "tags_all": {
              "Name": "ideas-api-staging-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c5611f7f25039bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.module.vpc.aws_security_group.app_beanstalk_elb_sg",
            "module.app.module.vpc.aws_security_group.app_beanstalk_sg",
            "module.app.module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}